lanecwe-Prod/src/objects/PackageChannel__c.object
<CustomObject>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <referenceTo>Channel__c</referenceTo>
        <relationshipLabel>PackageChannels</relationshipLabel>
        <relationshipName>PackageChannels</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Package_Channel_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Package_Channel_External_ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package__c</fullName>
        <label>Package</label>
        <referenceTo>Service__c</referenceTo>
        <relationshipLabel>PackageChannels</relationshipLabel>
        <relationshipName>PackageChannels</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>PackageChannel</label>
    <nameField>
        <displayFormat>PC-{0000}</displayFormat>
        <label>PackageChannel Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PackageChannels</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>